--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 *{
+   
     padding: 0;
     margin: 0;
     background-color: burlywood;
 }
 h1{
     text-align: center;
-    background: beige;
     color: black;
+    background-color: beige;
     padding: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 nav ul  {
     background-color: gray;
-    width: 100;
+    width: 100%;
     text-align: center;
     list-style-type: none;
 }
@@ -176,7 +178,8 @@ footer {
     margin-top: 40px;
 }
 footer p {
-    background-color: black;
+    background: linear-gradient(rgba(0,0,0,0.6),black);
+    
     text-align: center;
     padding: 50px;
 }
